# auto-correct

./: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  porter-app-3877-docker.yml  release.yml
autocorrect-extension/: service-worker-loader.js
autocorrect-extension/assets/: index.ts-Db6K9sUj.js  index.ts-loader-DIKUgqel.js  language-tool-client-CaKIfVxh.js  popup-BzcIR5iq.js  popup-DupePM_t.css  service-worker.ts-BF8zdjSu.js  storage-Lryb-ELa.js
autocorrect-extension/src/popup/: index.html
docker/: Dockerfile  PREMIUM.md  download-ngrams.sh  fly.toml
grammar-rs/: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  missing.md
grammar-rs/benches/: filters.rs  pipeline.rs  rules.rs  spell_checker.rs  tokenizer.rs
grammar-rs/data/: words_en.txt
grammar-rs/data/bench_texts/: long.txt  medium.txt  short.txt
grammar-rs/data/dictionaries/: en_US.fst
grammar-rs/scripts/: download_lefff.py  download_ngrams.sh  download_ngrams_r2.sh  upload_ngrams_r2.sh
grammar-rs/src/: lang_detect.rs  lib.rs
grammar-rs/src/analyzer/: mod.rs  pos_tagger.rs  simple.rs
grammar-rs/src/checker/: coherency_checker.rs  compound_checker.rs  confusion.rs  context_checker.rs  contraction_checker.rs  diacritics_checker.rs  dynamic_pattern_checker.rs  l2_confusion_checker.rs  mod.rs  ngram_confusion_checker.rs  pattern_rules.rs  pos_pattern_checker.rs  prohibit_checker.rs  replace_rules.rs  rules.rs  spell.rs  style_checker.rs  uncountable_checker.rs
grammar-rs/src/checker/data/: en_added.rs  en_antipatterns.rs  en_coherency.rs  en_common_words.rs  en_compounds.rs  en_confusion.rs  en_confusion_extended.rs  en_confusion_l2_de.rs  en_confusion_l2_es.rs  en_confusion_l2_fr.rs  en_confusion_l2_nl.rs  en_context_words.rs  en_contractions.rs  en_determiners.rs  en_diacritics.rs  en_disambig_pos.rs  en_disambig_skip.rs  en_ignore.rs  en_multiwords.rs  en_ngram_words.rs  en_numbers.rs  en_partlycountable.rs  en_pattern_tests.rs  en_patterns.rs  en_pos_patterns.rs  en_prohibit.rs  en_proper_nouns.rs  en_replace.rs  en_spelling.rs  en_style.rs  en_synonyms.rs  en_uncountable.rs  en_us_gb.rs  en_word_definitions.rs  fr_antipatterns.rs  fr_common_words.rs  fr_compounds.rs  fr_confusion.rs  fr_custom_confusion.txt  fr_custom_redundancies.txt  (+15 more)
grammar-rs/src/core/: filter.rs  mod.rs  pipeline.rs  traits.rs
grammar-rs/src/dictionary/: fst_dict.rs  mod.rs
grammar-rs/src/filter/: code.rs  date.rs  mod.rs  number.rs  quoted.rs  url.rs
grammar-rs/src/language_model/: builder.rs  compact_model.rs  downloader.rs  mod.rs  ngram_model.rs  probability.rs
grammar-rs/src/lucene/: codec.rs  compound.rs  mod.rs  reader.rs  stored.rs  vint.rs
grammar-rs/src/morphology/: french.rs  mod.rs  pos_transform.rs
grammar-rs/src/tokenizer/: contraction.rs  mod.rs  simple.rs
grammar-rs/tests/: api.rs  filters.rs  ngram_model_test.rs  pattern_validation.rs  quality.rs  regression.rs
grammar-rs/tests/k6/: load-test-grammarrs.js  load-test-languagetool.js  quality-compare.js
public/: manifest.json
src/background/: service-worker.ts
src/content/: language-tool-client.ts  position-map.ts  text-field-manager.ts  underline-renderer.ts
src/popup/: Popup.tsx  index.html  styles.css
src/shared/: storage.ts  types.ts
tests/e2e/: extension.spec.ts
tests/unit/: position-map.test.ts
